# mkguid

./: .editorconfig  CMakeLists.txt  main.cpp  uuid.cpp  uuid.h
.github/workflows/: build-and-test.yml
